--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "figmafetch-module",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "",
   "main": "figmafetch.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./__test__/get-node-ids.js"
   },
   "keywords": [],
   "author": "",
